[package]
name = "nest-rs-guards"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport-spanning guards for nestrs — one trait, three transports (HTTP, GraphQL, WS), declared once with App::builder().use_guards_global(...)."

[features]
default = []
# GraphQL surface: the `check_graphql` guard entry + the `/graphql` in-band
# chain runners. Forwards the `graphql` feature onto every trait crate guards
# re-exports through, so the reserved cross-transport seams line up and the
# GraphQL stack is compiled once, coherently, whenever GraphQL is served.
graphql = [
    "dep:nest-rs-graphql",
    "nest-rs-filters/graphql",
    "nest-rs-exception-filters/graphql",
    "nest-rs-interceptors/graphql",
]
# WebSocket surface: the `check_ws_message` guard entry, `GuardAsWsMessageCheck`
# bridge, the per-message chain runner, and the `WsDataPipe` global-pipe fold.
# Forwards `ws` onto the sibling trait crates for the same coherence reason.
ws = [
    "dep:nest-rs-ws",
    "nest-rs-filters/ws",
    "nest-rs-exception-filters/ws",
    "nest-rs-interceptors/ws",
]

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
poem.workspace = true
nest-rs-core.workspace = true
nest-rs-http.workspace = true
nest-rs-graphql = { workspace = true, optional = true }
nest-rs-interceptors.workspace = true
nest-rs-pipes.workspace = true
nest-rs-ws = { workspace = true, optional = true }
nest-rs-exception-filters.workspace = true
nest-rs-filters.workspace = true

[lints]
workspace = true
