[package]
name = "nest-rs-guards"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport-spanning guards for nestrs — one trait, three transports (HTTP, GraphQL, WS), declared once with App::builder().use_guards_global(...)."
keywords = ["framework", "nestjs", "guards", "authorization", "middleware"]
categories = ["web-programming", "authentication"]

[features]
default = []
# GraphQL surface: the `check_graphql` guard entry + the `/graphql` in-band
# chain runners.
graphql = ["dep:nest-rs-graphql"]
# WebSocket surface: the `check_ws_message` guard entry, `GuardAsWsMessageCheck`
# bridge, the per-message chain runner, and the `WsDataPipe` global-pipe fold.
ws = ["dep:nest-rs-ws"]
# MCP surface: `GlobalPoolMcpGuard`, the fallback `McpOperationGuard` that folds
# the global pool in-band on `/mcp` (the twin of the `/graphql` fallback).
mcp = ["dep:nest-rs-mcp"]

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
poem.workspace = true
nest-rs-core.workspace = true
nest-rs-http.workspace = true
nest-rs-graphql = { workspace = true, optional = true }
nest-rs-mcp = { workspace = true, optional = true }
nest-rs-interceptors.workspace = true
nest-rs-pipes.workspace = true
nest-rs-ws = { workspace = true, optional = true }
nest-rs-exception-filters.workspace = true
nest-rs-filters.workspace = true

[dev-dependencies]
# Async unit tests drain a poem `Response` body (`into_bytes().await`) to assert
# the RFC-9457 `problem+json` denial rendering.
tokio.workspace = true

[lints]
workspace = true
